[gd_scene load_steps=5 format=3 uid="uid://bnustnoseeuhh"]

[ext_resource type="Script" uid="uid://cutohlywaniwj" path="res://view/hud/healthbar/health_bar.gd" id="1_healthbar"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_border"]
bg_color = Color(0.15, 0.12, 0.1, 0.95)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.85, 0.7, 0.35, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
shadow_color = Color(0, 0, 0, 0.4)
shadow_size = 2
shadow_offset = Vector2(0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_background"]
bg_color = Color(0.15, 0.12, 0.1, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_health"]
bg_color = Color(0.2, 0.8, 0.2, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[node name="HealthBar" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 6.0
mouse_filter = 2
script = ExtResource("1_healthbar")

[node name="BorderPanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_border")

[node name="HealthContainer" type="Control" parent="BorderPanel"]
layout_mode = 2
mouse_filter = 2

[node name="Background" type="Panel" parent="BorderPanel/HealthContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_background")

[node name="HealthFill" type="Panel" parent="BorderPanel/HealthContainer"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 1
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_health")

[node name="FlagIcon" type="TextureRect" parent="."]
z_index = 10
layout_mode = 0
offset_left = -12.0
offset_top = -2.0
offset_right = 4.0
offset_bottom = 14.0
mouse_filter = 2
stretch_mode = 5
expand_mode = 1
